DynamicReports-examples Change Log
==================================

Changes in version 1.2.0 (2010-06-29)
---------------------------------------------------
- new examples - examples/subtotals/*
                 examples/miscellaneous/*
                 examples/column/CalculatedColumnReport

Changes in version 1.1.1 (2010-06-09)
---------------------------------------------------
- new examples - examples/group/*

Changes in version 1.1.0 (2010-05-12)
---------------------------------------------------
- new examples - examples/gettingstarted/SimpleReport_ClassicSyntax
                 examples/column/*
- updated SimpleReport_Step11, SimpleReport_Step12 due to the new feature (conditions expression builder)                

Changes in version 1.0.1 (2010-04-21)
---------------------------------------------------
- new examples - examples/gettingstarted/*

Changes in version 1.0.0 (2010-03-31)
---------------------------------------------------
Initial version